# notification_system

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  schemas.py  workers.py
app/services/: base.py  email_service.py  sms_service.py  telegram_service.py
tests/: test_notification.py
